# iris

./: .gitattributes  .gitignore  LICENSE  README.md  point_cloud_architecture.dsl  point_cloud_processing_pipeline.dsl  pyproject.toml  workspace.dsl  workspace.json
data/: README.md
data/ns-scans/: auto01.e57  auto01crop.e57  auto01full.e57  auto02.e57  auto02crop.e57  auto02full.e57
data/ns-scans/14 auto scan/: auto_00.e57  auto_000.e57  auto_01.e57  auto_02.e57  auto_03.e57  auto_04.e57  auto_05.e57  auto_06.e57  auto_07.e57  auto_08.e57  auto_09.e57
iris/: car_tracking.py  enhanced_car_tracking.py  launch_passenger_demo.py  launcher.py  sales_deck_launcher.py  sensor_fusion.py  sensor_fusion_demo.py  sequence_fusion.py  sequence_lidar_analysis.py  simple_car_tracking_demo.py
iris/core/: dependency_checker.py  headless_launcher.py
iris/point_cloud/: add_human_model.py  config.py  spatial_utils.py  visualize_output.py
iris/point_cloud/controllers/: base_controller.py
iris/point_cloud/interfaces/: __init__.py
iris/point_cloud/loaders/: base_loader.py  e57_loader.py  file_loader_factory.py  pcd_loader.py
iris/point_cloud/models/: __init__.py  human_models.py
iris/point_cloud/pipeline/: __init__.py  analysis_pipeline.py
iris/point_cloud/processors/: __init__.py  ai_analyzer.py  cockpit_refiner.py  ground_separator.py  interior_detector.py
iris/point_cloud/services/: __init__.py  configuration_service.py  cube_selection_service.py  human_positioning_service.py
iris/point_cloud/widgets/: cube_selection_widget.py  human_positioning_widget.py
src/: create_sensor_fusion_animation.py  demo_temporal_analysis.py  lidar_gui_app.py  macos_launcher.py  passenger_demo_standalone.py  passenger_detection_animation.py  quick_sensor_fusion_test.py  run_all_sensor_fusion.py  sales_deck_visualizations.py  sensor_fusion_no_yolo.py  simple_batch_fusion.py
src/core/: __init__.py  cli_launcher.py  environment_setup.py  gui_launcher.py  launcher_base.py
src/point_cloud/: e57_vehicle_analysis.py  error_handling.py  interactive_cube_selector.py  interactive_human_positioner.py  ptv3_integration.py  test_service_separation.py  visualise_raw_lidar_files.py  vtk_utils.py
src/point_cloud/controllers/: __init__.py  cube_selection_controller.py  human_positioning_controller.py
src/point_cloud/interfaces/: processors.py
src/point_cloud/loaders/: __init__.py  bag_loader.py
src/point_cloud/models/: point_cloud_data.py  selection_models.py
src/point_cloud/processors/: preprocessor.py  vehicle_identifier.py
src/point_cloud/services/: base_service.py  service_layer_test.py  service_registry.py
src/point_cloud/spatial/: __init__.py  cube_operations.py  geometric_transforms.py
src/point_cloud/widgets/: __init__.py  base_widget.py
